# pdfbaker

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .releaserc  .ruff.toml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml  update_citation_date.py
.github/: dependabot.yml
.github/workflows/: bandit.yaml  ossf-scorecard.yaml  pip-audit.yaml  pre-commit.yaml  scorecard.yml  semantic-release.yaml  tests.yaml
.templates/: CITATION.cff.j2
docs/: configuration.md  custom_processing.md  overview.md  usage.md  variants.md
examples/: .gitignore  examples.yaml  examples.yml
examples/custom_locations/other_pages/: custom_page.yaml
examples/custom_locations/other_templates/: custom_page.svg.j2
examples/custom_locations/your_directory/: config.yaml
examples/custom_locations/your_directory/pages/: content.yaml  intro.yaml  standard_page.yaml
examples/custom_locations/your_directory/templates/: standard_page.svg.j2
examples/custom_processing/: bake.py  config.yaml
examples/custom_processing/pages/: main.yml
examples/custom_processing/templates/: main.svg.j2
examples/minimal/: config.yaml  config.yml
examples/minimal/pages/: main.yaml  main.yml
examples/minimal/templates/: main.svg.j2
examples/regular/: config.yaml  config.yml
examples/regular/pages/: benefits.yml  features.yaml  features.yml  intro.yaml
examples/regular/templates/: intro.svg.j2  list.svg.j2
examples/variants/: config.yaml
examples/variants/pages/: main.yaml
examples/variants/templates/: main.svg.j2
src/: test_config.py
src/pdfbaker/: __init__.py  __main__.py  baker.py  common.py  config.py  console.py  document.py  errors.py  logging.py  page.py  pdf.py  processing.py  render.py  types.py
src/pdfbaker/config/: __init__.py  baker.py  document.py  page.py
tests/: conftest.py  examples.yaml  test_baker.py  test_cli.py  test_common.py  test_config.py  test_document.py  test_page.py  test_pdf.py  test_processing.py  test_render.py
